src/main/java/reqrest/generated/ReqRestParser.java
package reqrest.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ReqRestParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Start=1, Finish=2, If=3, Elsif=4, Else=5, While=6, Load=7, Print=8, Assign=9, 
		Add=10, Subtract=11, Multiply=12, Divide=13, Equal=14, NotEqual=15, GreaterThan=16, 
		LowerThan=17, GreaterOrEqual=18, LowerOrEqual=19, Not=20, And=21, Or=22, 
		ExpressionEnd=23, HttpGet=24, HttpPost=25, HttpPut=26, HttpPatch=27, HttpDelete=28, 
		OpeningParenthesis=29, ClosingParenthesis=30, OpeningCurlyBracket=31, 
		ClosingCurlyBracket=32, Definition=33, Comma=34, NewLine=35, True=36, 
		False=37, ID=38, Minus=39, Integer=40, Float=41, String=42, Comment=43, 
		Whitespaces=44;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_expression = 2, RULE_atom = 3, 
		RULE_httpMethods = 4, RULE_httpGet = 5, RULE_httpPost = 6, RULE_httpPut = 7, 
		RULE_httpPatch = 8, RULE_httpDelete = 9, RULE_initialization = 10, RULE_assignment = 11, 
		RULE_print = 12, RULE_load = 13, RULE_newLine = 14, RULE_ifStatement = 15, 
		RULE_conditionBlock = 16, RULE_statementBlock = 17, RULE_whileLoop = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "expression", "atom", "httpMethods", "httpGet", 
			"httpPost", "httpPut", "httpPatch", "httpDelete", "initialization", "assignment", 
			"print", "load", "newLine", "ifStatement", "conditionBlock", "statementBlock", 
			"whileLoop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'go'", "'finish'", "'if'", "'elsif'", "'else'", "'while'", "'load'", 
			"'print'", "'='", "'add'", "'subtract'", "'multiply'", "'divide'", "'eq'", 
			"'neq'", "'gt'", "'lt'", "'ge'", "'le'", "'~'", "'&&'", "'||'", "'#'", 
			"'get'", "'post'", "'put'", "'patch'", "'delete'", "'('", "')'", "'{'", 
			"'}'", "'def'", "','", "'newline'", "'true'", "'false'", null, "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Start", "Finish", "If", "Elsif", "Else", "While", "Load", "Print", 
			"Assign", "Add", "Subtract", "Multiply", "Divide", "Equal", "NotEqual", 
			"GreaterThan", "LowerThan", "GreaterOrEqual", "LowerOrEqual", "Not", 
			"And", "Or", "ExpressionEnd", "HttpGet", "HttpPost", "HttpPut", "HttpPatch", 
			"HttpDelete", "OpeningParenthesis", "ClosingParenthesis", "OpeningCurlyBracket", 
			"ClosingCurlyBracket", "Definition", "Comma", "NewLine", "True", "False", 
			"ID", "Minus", "Integer", "Float", "String", "Comment", "Whitespaces"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReqRest.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReqRestParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode Start() { return getToken(ReqRestParser.Start, 0); }
		public TerminalNode Finish() { return getToken(ReqRestParser.Finish, 0); }
		public TerminalNode EOF() { return getToken(ReqRestParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(Start);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << While) | (1L << Load) | (1L << Print) | (1L << HttpGet) | (1L << HttpPost) | (1L << HttpPut) | (1L << HttpPatch) | (1L << HttpDelete) | (1L << Definition) | (1L << NewLine) | (1L << ID))) != 0)) {
				{
				{
				setState(39);
				statement();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(Finish);
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public InitializationContext initialization() {
			return getRuleContext(InitializationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public HttpMethodsContext httpMethods() {
			return getRuleContext(HttpMethodsContext.class,0);
		}
		public NewLineContext newLine() {
			return getRuleContext(NewLineContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Definition:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				initialization();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				assignment();
				}
				break;
			case If:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				ifStatement();
				}
				break;
			case While:
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				whileLoop();
				}
				break;
			case Print:
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				print();
				}
				break;
			case Load:
				enterOuterAlt(_localctx, 6);
				{
				setState(53);
				load();
				}
				break;
			case HttpGet:
			case HttpPost:
			case HttpPut:
			case HttpPatch:
			case HttpDelete:
				enterOuterAlt(_localctx, 7);
				{
				setState(54);
				httpMethods();
				}
				break;
			case NewLine:
				enterOuterAlt(_localctx, 8);
				{
				setState(55);
				newLine();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OrExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode Or() { return getToken(ReqRestParser.Or, 0); }
		public OrExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitOrExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaryMinusExpressionContext extends ExpressionContext {
		public TerminalNode Minus() { return getToken(ReqRestParser.Minus, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UnaryMinusExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitUnaryMinusExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode And() { return getToken(ReqRestParser.And, 0); }
		public AndExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitAndExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomExpressionContext extends ExpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public AtomExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitAtomExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RelationalExpressionContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode GreaterThan() { return getToken(ReqRestParser.GreaterThan, 0); }
		public TerminalNode GreaterOrEqual() { return getToken(ReqRestParser.GreaterOrEqual, 0); }
		public TerminalNode LowerThan() { return getToken(ReqRestParser.LowerThan, 0); }
		public TerminalNode LowerOrEqual() { return getToken(ReqRestParser.LowerOrEqual, 0); }
		public RelationalExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitRelationalExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqualityExpressionContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode Equal() { return getToken(ReqRestParser.Equal, 0); }
		public TerminalNode NotEqual() { return getToken(ReqRestParser.NotEqual, 0); }
		public EqualityExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitEqualityExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotExpressionContext extends ExpressionContext {
		public TerminalNode Not() { return getToken(ReqRestParser.Not, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NotExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitNotExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArithmeticExpressionContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode Add() { return getToken(ReqRestParser.Add, 0); }
		public TerminalNode Subtract() { return getToken(ReqRestParser.Subtract, 0); }
		public TerminalNode Multiply() { return getToken(ReqRestParser.Multiply, 0); }
		public TerminalNode Divide() { return getToken(ReqRestParser.Divide, 0); }
		public ArithmeticExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitArithmeticExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Minus:
				{
				_localctx = new UnaryMinusExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(59);
				match(Minus);
				setState(60);
				expression(8);
				}
				break;
			case Not:
				{
				_localctx = new NotExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(61);
				match(Not);
				setState(62);
				expression(2);
				}
				break;
			case OpeningParenthesis:
			case True:
			case False:
			case ID:
			case Integer:
			case Float:
			case String:
				{
				_localctx = new AtomExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(63);
				atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(81);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ArithmeticExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(66);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(67);
						((ArithmeticExpressionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Add) | (1L << Subtract) | (1L << Multiply) | (1L << Divide))) != 0)) ) {
							((ArithmeticExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(68);
						expression(8);
						}
						break;
					case 2:
						{
						_localctx = new RelationalExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(69);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(70);
						((RelationalExpressionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GreaterThan) | (1L << LowerThan) | (1L << GreaterOrEqual) | (1L << LowerOrEqual))) != 0)) ) {
							((RelationalExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(71);
						expression(7);
						}
						break;
					case 3:
						{
						_localctx = new EqualityExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(72);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(73);
						((EqualityExpressionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==Equal || _la==NotEqual) ) {
							((EqualityExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(74);
						expression(6);
						}
						break;
					case 4:
						{
						_localctx = new AndExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(75);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(76);
						match(And);
						setState(77);
						expression(5);
						}
						break;
					case 5:
						{
						_localctx = new OrExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(78);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(79);
						match(Or);
						setState(80);
						expression(4);
						}
						break;
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BooleanAtomContext extends AtomContext {
		public TerminalNode True() { return getToken(ReqRestParser.True, 0); }
		public TerminalNode False() { return getToken(ReqRestParser.False, 0); }
		public BooleanAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitBooleanAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdAtomContext extends AtomContext {
		public TerminalNode ID() { return getToken(ReqRestParser.ID, 0); }
		public IdAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitIdAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringAtomContext extends AtomContext {
		public TerminalNode String() { return getToken(ReqRestParser.String, 0); }
		public StringAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitStringAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComplexExpressionContext extends AtomContext {
		public TerminalNode OpeningParenthesis() { return getToken(ReqRestParser.OpeningParenthesis, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ClosingParenthesis() { return getToken(ReqRestParser.ClosingParenthesis, 0); }
		public ComplexExpressionContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitComplexExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberAtomContext extends AtomContext {
		public TerminalNode Integer() { return getToken(ReqRestParser.Integer, 0); }
		public TerminalNode Float() { return getToken(ReqRestParser.Float, 0); }
		public NumberAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitNumberAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atom);
		int _la;
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpeningParenthesis:
				_localctx = new ComplexExpressionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(OpeningParenthesis);
				setState(87);
				expression(0);
				setState(88);
				match(ClosingParenthesis);
				}
				break;
			case Integer:
			case Float:
				_localctx = new NumberAtomContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				_la = _input.LA(1);
				if ( !(_la==Integer || _la==Float) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case True:
			case False:
				_localctx = new BooleanAtomContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				_la = _input.LA(1);
				if ( !(_la==True || _la==False) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case ID:
				_localctx = new IdAtomContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				match(ID);
				}
				break;
			case String:
				_localctx = new StringAtomContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				match(String);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HttpMethodsContext extends ParserRuleContext {
		public HttpGetContext httpGet() {
			return getRuleContext(HttpGetContext.class,0);
		}
		public HttpPostContext httpPost() {
			return getRuleContext(HttpPostContext.class,0);
		}
		public HttpPutContext httpPut() {
			return getRuleContext(HttpPutContext.class,0);
		}
		public HttpPatchContext httpPatch() {
			return getRuleContext(HttpPatchContext.class,0);
		}
		public HttpDeleteContext httpDelete() {
			return getRuleContext(HttpDeleteContext.class,0);
		}
		public HttpMethodsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_httpMethods; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitHttpMethods(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HttpMethodsContext httpMethods() throws RecognitionException {
		HttpMethodsContext _localctx = new HttpMethodsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_httpMethods);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HttpGet:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				httpGet();
				}
				break;
			case HttpPost:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				httpPost();
				}
				break;
			case HttpPut:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				httpPut();
				}
				break;
			case HttpPatch:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				httpPatch();
				}
				break;
			case HttpDelete:
				enterOuterAlt(_localctx, 5);
				{
				setState(100);
				httpDelete();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HttpGetContext extends ParserRuleContext {
		public TerminalNode HttpGet() { return getToken(ReqRestParser.HttpGet, 0); }
		public TerminalNode OpeningParenthesis() { return getToken(ReqRestParser.OpeningParenthesis, 0); }
		public TerminalNode String() { return getToken(ReqRestParser.String, 0); }
		public TerminalNode ClosingParenthesis() { return getToken(ReqRestParser.ClosingParenthesis, 0); }
		public TerminalNode ExpressionEnd() { return getToken(ReqRestParser.ExpressionEnd, 0); }
		public HttpGetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_httpGet; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReqRestVisitor ) return ((ReqRestVisitor<? extends T>)visitor).visitHttpGet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HttpGetContext httpGet() throws RecognitionException {
		HttpGetContext _localctx = new HttpGetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_httpGet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(HttpGet);
			setState(104);
			match(OpeningParenthesis);
			setState(105);
			match(String);
			setState(106);
			match(ClosingParenthesis);
			setState(107);
			match(ExpressionEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
